# picgen

./: Cargo.toml  Rocket.toml
src/: main.rs
static/: template1.json  template2.json
