[package]
name = "imgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "*", features = ["tls","json"] }
markdown = "1.0.0-alpha.16"
serde= "*"
serde_json = "*"
image = "0.25.1"
imageproc = "0.24.0"
ab_glyph = "0.2.24"